update, fixed ps-letter-spacing helpers

--- a/src/static/scss/blocks/_headline.scss
+++ b/src/static/scss/blocks/_headline.scss
@@ -14,5 +14,5 @@
 
     // psd translated settings
     line-height: ps-line-height($headline-font-size, 95);
-    letter-spacing: rem(-5);
+    @include ps-letter-spacing(-50);
 }
